update list of authorized front end app